✨ feat: 增加动态注入脚本功能

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,7 +15,8 @@
     "tabs",
     "storage",
     "activeTab",
-    "clipboardWrite"
+    "clipboardWrite",
+    "scripting"
   ],
   "action": {
     "default_icon": {
